<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToDo</string>
    <string name="todo_description">Descrição da tarefa</string>
    <string name="menuitem_new">Nova tarefa</string>
    <string name="iteminsert_sucess">Nova tarefa incluída com sucesso</string>
    <string name="context_edit">Editar tarefa</string>
    <string name="itemedit_sucess">Tarefa editada com sucesso</string>
    <string name="context_delete">Excluir tarefa</string>
    <string name="itemdelete_sucess">Tarefa excluída com sucesso</string>
    <string name="cancel">Operação cancelada</string>
    <string name="dialog_title">Atenção</string>
    <string name="dialog_message">Deseja excluir a tarefa?</string>
    <string name="dialog_positve">Sim</string>
    <string name="dialog_negative">Não</string>
    <string name="btn_save">Salvar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="titulo_activity">Cadastro De Pessoas</string>
    <string name="titulo_activity2">Cadastro De Emprestimos</string>
    <string name="titulo_activity3">Cadastro De Livros</string>
    <string name="labelNome">Nome</string>
    <string name="labelEmail">Email</string>
    <string name="labelTelefoneFixo">Telefone</string>
    <string name="labelTelefoneCelular">Celular</string>
    <string name="botaoSalvar">Cadastrar</string>
    <string name="botaoCancelar">Cancelar</string>
    <string name="botaoLimpar">Limpar</string>
    <string name="botaoSair">Sair</string>
    <string name="labelDataEmp">Data Emprestimo</string>
    <string name="labelDataDev">Data Devolucao</string>
    <string name="labelPessoa">Cliente</string>
    <string name="menuitem_cad_livro">Livros</string>
    <string name="menuitem_cad_emprestimo">Emprestimos</string>
    <string name="menuitem_cad_pessoa">Clientes</string>
    <string name="labelTitulo_Livro">Titulo</string>
    <string name="labelAutor_Livro">Autor</string>
    <string name="labelEdicao_Livro">Edicao</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_tela_inicial">Tela Inicial</string>
    <string name="title_activity_pessoas">Pessoas</string>

</resources>